[package]
name = "trustorg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
to-api = { version = "0.1.0", path = "lib/to-api" }
to-proxy = { version = "0.1.0", path = "lib/to-proxy" }
futures = "0.3"

[profile.release]
strip = true 
opt-level = "z" 
lto = true
