[package]
name = "to-auth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
to-config = { version="0.1.0", path="../to-config"}
serde = { version = "1.0.91", features = ["derive"]}
jwt = "0.16.0"
hmac = "0.12.1"
sha2 = "0.10.6"