[package]
name = "to-proxy"
version = "0.1.0"
edition = "2018"


[dependencies]
hyper-reverse-proxy = "0.5"
cookie = "0.16"
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
lazy_static = "1.4.0"
hyper-trust-dns = { version = "0.4.2", features = [
  "rustls-http2",
  "dnssec-ring",
  "dns-over-https-rustls",
  "rustls-webpki",
  "https-only"
] }
